# cpp-batch-transactor

./: .env.example  CMakeLists.txt  README.md  docker-compose.yaml  run_batch.sh
data/: transactions.csv
include/: db.hpp
sql/: init.sql
src/: main.cpp
src/io/: csv_reader.cpp  csv_reader.h
src/transaction/: transaction.cpp  transaction.h  transaction_processor.cpp  transaction_processor.h
src/transaction/helpers/: transaction_validator.h
